--- a/main.css
+++ b/main.css
@@ -469,9 +469,25 @@ section#visualization .multiplyAnimate{
 	100% {transform: scale(0.9);}
 }
 @-webkit-keyframes pulse {
-	0% {-webkit-transform: scale(0.95);}
-	50% {-webkit-transform: scale(1);}
-	100% {-webkit-transform: scale(0.95);}
+	0% {transform: scale(0.9);}
+	50% {transform: scale(1);}
+	100% {transform: scale(0.9);}
+}
+.spotlight{
+  -webkit-animation-name: spotlight;
+  animation-name: spotlight;
+  -webkit-animation-duration: 0.3s;
+	animation-duration: 0.3s;
+}
+@keyframes spotlight {
+	0% {opacity: 0.3; transform: scale(1);}
+	50% {opacity: 1; transform: scale(1.5);}
+	100% {opacity: 0.3; {transform: scale(1);}
+}
+@-webkit-keyframes spotlight {
+	0% {opacity: 0.3; transform: scale(1);}
+	50% {opacity: 1; transform: scale(1.5);}
+	100% {opacity: 0.3; transform: scale(1);}
 }
 .sendRightSlow{
   -webkit-animation-name: sendRight;
