Multiply animation positions 1st row properly

--- a/main.css
+++ b/main.css
@@ -271,8 +271,8 @@ section#visualization .multiplyAnimate{
 }
 .multiplyResult{
   position: relative;
-  top: -100%;
   left: 0;
+  display: flex;
 }
 
 
