--- a/main.css
+++ b/main.css
@@ -543,6 +543,22 @@ section#visualization .multiplyAnimate{
 	20%   {transform: scale(1.1);}
 	100% {transform: scale(.2);}
 }
+.zoomIn{  /*EXTRA?*/
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  -webkit-animation-duration: 0.2s;
+	animation-duration: 0.2s;
+}
+@-webkit-keyframes zoomIn {
+	0%   {transform: scale(3); opacity: 0}
+	80%   {transform: scale(0.9);}
+	100% {transform: scale(1); opacity: 1}
+}
+@keyframes zoomIn {
+  0%   {transform: scale(3); opacity: 0}
+	80%   {transform: scale(0.9);}
+	100% {transform: scale(1); opacity: 1}
+}
 
 /* Mobile responsiveness */
 @media only screen and (max-width: 1280px) and (min-width: 765px){
